--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.11.0",
     "styled-components": "^5.3.5",
